--- a/package.json
+++ b/package.json
@@ -1,7 +1,19 @@
 {
+  "scripts": {
+    "start": "webpack --watch",
+    "build": "webpack -p"
+  },
   "dependencies": {
+    "axios": "^0.18.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "babel-preset-es2015": "^6.24.1",
     "cors": "^2.8.4",
     "destroy": "^1.0.4",
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "http-proxy-middleware": "^0.19.0",
+    "js-base64": "^2.4.9",
+    "md5": "^2.2.1",
+    "md5-base64": "0.0.3"
   }
 }
